overflow issue resolved

--- a/scss/custom/views/_sidebar.scss
+++ b/scss/custom/views/_sidebar.scss
@@ -1,6 +1,7 @@
 $open: ".sidebar.open" !default;
 
 .sidebar {
+
   position: fixed;
   top: 0;
   z-index: $zindex-popover;
@@ -13,6 +14,16 @@ $open: ".sidebar.open" !default;
   &.open {
     width: $sidebar-expanded-width;
     @include transition(all .3s linear);
+  }
+
+  .panel {
+    height: 100%;
+    padding-bottom: 100%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
@@ -109,7 +120,7 @@ $open: ".sidebar.open" !default;
 
 .customer {
   max-height: 0;
-  padding-bottom: 100%;
+  padding-bottom: 104%;
   overflow: hidden;
   border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
   @include transition(all .3s linear);
@@ -124,6 +135,7 @@ $open: ".sidebar.open" !default;
       font-weight: $font-weight-lighter;
       color: theme-color-level(secondary, -10);
     }
+
     .badge {
       position: relative;
       max-width: 160px;
@@ -134,7 +146,7 @@ $open: ".sidebar.open" !default;
       font-weight: $font-weight-lighter;
       color: $white;
       text-align: center;
-      text-overflow: ellipsis;
+      text-overflow: ellipsis; 
       white-space: nowrap;
       background: $primary;
       border: none;
@@ -153,10 +165,11 @@ $open: ".sidebar.open" !default;
 
   #{$open} & {
     max-height: $sidebar-collapsed-width;
+    padding-top: $grid-gutter-width / 2;
     & .mdi-account-circle {
       width: 100px;
       height: 100px;
-      margin: ($grid-gutter-width / 2) auto 0;
+      margin: 0 auto;
       &::before {
         font-size: 100px;
       }
